<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.android.sleeptracker.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.android.sleeptracker.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.android.sleeptracker.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/sleep_tracker_fragment"
        android:name="com.example.android.sleeptracker.sleeptracker.SleepTrackerFragment"
        android:label="@string/sleep_tracker_fragment"
        tools:layout="@layout/fragment_sleep_tracker">
        <action
            android:id="@+id/action_sleepTrackerFragment_to_sleepQualityFragment"
            app:destination="@id/sleep_quality_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:popEnterAnim="@anim/slide_in_right" />
    </fragment>

    <fragment
        android:id="@+id/sleep_quality_fragment"
        android:name="com.example.android.sleeptracker.sleepquality.SleepQualityFragment"
        android:label="@string/sleep_quality_fragment"
        tools:layout="@layout/fragment_sleep_quality">
        <argument
            android:name="sleepNightKey"
            app:argType="long" />
        <action
            android:id="@+id/action_sleepQualityFragment_to_sleepTrackerFragment"
            app:destination="@id/sleep_tracker_fragment"
            app:launchSingleTop="false"
            app:popUpTo="@+id/sleep_tracker_fragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>